--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
+        <img src="img/pokebola.png" alt="avatar do site" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou Fernanda_</p>
         <h1>Eu ensino Programação</h1>
@@ -33,26 +33,24 @@
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img/charmander.png" class="card-img-top" alt="Imagem dos pokemons iniciais">
                     <div class="card-body">
-                        <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
-                        <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros
-                            favoritos, incluindo informações sobre os autores, datas de publicação e links para compra
-                            na Amazon. A página é estilizada com CSS para uma visualização agradável e usa fontes
-                            externas do Google Fonts.
+                        <h5 class="card-title">Os pokemons iniciais de Kanto</h5>
+                        <p class="card-text">Charmander é um pokemon inicial da região Kanto, suas habilidades envolvem ataques de fogo e ele possui outras 2 evoluções, sendo o charizard a ultima
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
-                            o projeto</button>
+                            o pokemon</button>
                     </div>
                 </div>
             </div>
             <!-- Projeto 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img/bulbasaur.png" class="card-img-top" alt="Imagem dos pokemons iniciais">
                     <div class="card-body">
-                        <h5 class="card-title">Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência
-                            Artificial</h5>
+                        <h5 class="card-title">Os pokemons iniciais de Kanto
+                
+                        </h5>
                         <p class="card-text">Este projeto é um jogo interativo baseado em navegador que explora o
                             impacto e as implicações da Inteligência Artificial (IA) na sociedade, permitindo que as
                             pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o
