--- a/index.html
+++ b/index.html
@@ -14,17 +14,14 @@
     <header class="container text-center">
         <img src="img/pokebola.png" alt="avatar do site" class="rounded-circle" width="150" height="150"
             srcset="">
-        <p class="lead">Eu sou Fernanda_</p>
-        <h1>Eu ensino Programação</h1>
-        <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino
-            Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
-            que já desenvolvi!</p>
-        <p>Minhas habilidades</p>
+        <p class="lead">Pokedex</p>
+        <h1>Os pokemons iniciais de Kanto</h1>
+        <p>Os pokemons iniciais da região de Kanto, presente principalmente no jogo "Pokemon fire red"</p>
+        <p>Pokemons em questão</p>
         <div>
-            <p class="badge bg-secondary">HTML</p>
-            <p class="badge bg-secondary">CSS</p>
-            <p class="badge bg-secondary">JavaScript</p>
-            <p class="badge bg-secondary">Scratch</p>
+            <p class="badge bg-secondary">Charmander</p>
+            <p class="badge bg-secondary">Bulbasaur</p>
+            <p class="badge bg-secondary">Squirtle</p>
         </div>
     </header>
     <main class="container mt-5">
